Upgrade IntelliJ Platform Gradle Plugin to 2.0  (#4524)